--- a/index.html
+++ b/index.html
@@ -2,9 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shobhit Gupta</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Shobhit Gupta | Full Stack Developer & AI Enthusiast</title>
+    <meta name="title" content="Shobhit Gupta | Full Stack Developer & AI Enthusiast" />
+    <meta name="description" content="Welcome to the official portfolio of Shobhit Gupta — a passionate Full Stack Developer and AI enthusiast. Explore projects, skills, resume, and more!" />
+    <meta name="keywords" content="Shobhit Gupta, Full Stack Developer, ReactJS, NextJS, AI Developer, Resume Builder, Data Scientist, Portfolio, Netlify" />
+    <meta name="author" content="Shobhit Gupta" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shobhitgupta.netlify.app/" />
+    <meta property="og:title" content="Shobhit Gupta | Full Stack Developer & AI Enthusiast" />
+    <meta property="og:description" content="Explore Shobhit Gupta’s projects and portfolio. Full Stack Web Developer specializing in ReactJS, Next.js, AI-based applications, and resume optimization tools." />
+    <meta property="og:image" content="https://shobhitgupta.netlify.app/preview.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://shobhitgupta.netlify.app/" />
+    <meta property="twitter:title" content="Shobhit Gupta | Full Stack Developer & AI Enthusiast" />
+    <meta property="twitter:description" content="Official portfolio of Shobhit Gupta — Full Stack Web Developer & AI Enthusiast. Browse my work, resume, and blog." />
+    <meta property="twitter:image" content="https://shobhitgupta.netlify.app/preview.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://shobhitgupta.netlify.app/" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Shobhit Gupta",
+        "url": "https://shobhitgupta.netlify.app/",
+        "sameAs": [
+          "https://github.com/shobhitg947",
+          "https://linkedin.com/in/shobhitg947"
+        ],
+        "jobTitle": "Full Stack Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Freelance / Open Source"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
